--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 .content {
 	background-color: #CFD8DC;
 }
+.hint {
+	font-size: 12px;
+	line-height: 14px;
+	transition: all 0.3s cubic-bezier(0.55, 0, 0.55, 0.2);
+	color: grey;
+}
+.hint.ng-hide,
+.hint.ng-enter,
+.hint.ng-leave.ng-leave-active {
+	bottom: 26px;
+	opacity: 0;
+}
+.hint.ng-leave,
+.hint.ng-enter.ng-enter-active {
+	bottom: 7px;
+	opacity: 1;
+}
